# rust-mod

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  TODO.md
.github/workflows/: ci.yml
crates/rustmod-client/: Cargo.toml
crates/rustmod-client/examples/: read_holding.rs
crates/rustmod-client/src/: lib.rs  points.rs  sync.rs
crates/rustmod-client/tests/: simulator_fixture.rs  sync_tcp_client.rs
crates/rustmod-core/: Cargo.toml
crates/rustmod-core/benches/: codec.rs
crates/rustmod-core/examples/: pdu_roundtrip.rs
crates/rustmod-core/fuzz/: Cargo.toml
crates/rustmod-core/fuzz/fuzz_targets/: fuzz_request_decode.rs  fuzz_response_decode.rs  fuzz_rtu_decode.rs  fuzz_tcp_decode.rs
crates/rustmod-core/src/: error.rs  lib.rs
crates/rustmod-core/src/encoding/: mod.rs  reader.rs  writer.rs
crates/rustmod-core/src/frame/: mod.rs  rtu.rs  tcp.rs
crates/rustmod-core/src/pdu/: exception.rs  function_code.rs  mod.rs  request.rs  response.rs
crates/rustmod-core/tests/: golden_packets.rs  properties.rs
crates/rustmod-datalink/: Cargo.toml
crates/rustmod-datalink/examples/: bacnet_modbus_combined_simulator.rs  in_memory_simulator.rs
crates/rustmod-datalink/src/: lib.rs  rtu.rs  rtu_server.rs  server.rs  sim.rs
crates/rustmod-datalink/tests/: simulator_fixture.rs
crates/rustmod-tools/: Cargo.toml
crates/rustmod-tools/examples/: common_helpers.rs
crates/rustmod-tools/src/: common.rs  lib.rs
