[workspace]
resolver = "2"
members = [
    "crates/rustmod-core",
    "crates/rustmod-datalink",
    "crates/rustmod-client",
    "crates/rustmod-tools",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rbhans/rust-mod"

[workspace.dependencies]
rustmod-core = { version = "0.1.0", path = "crates/rustmod-core" }
rustmod-datalink = { version = "0.1.0", path = "crates/rustmod-datalink" }
rustmod-client = { version = "0.1.0", path = "crates/rustmod-client" }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-serial = "5"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
