[package]
name = "rustmod-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level resilient Modbus client for rust-mod."
readme = "../../README.md"

[dependencies]
rustmod-core.workspace = true
rustmod-datalink.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true

[features]
default = []
metrics = []
