[package]
name = "rustmod-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Modbus protocol types, encoders, and frame codecs for rust-mod."
readme = "../../README.md"

[dependencies]
defmt = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
proptest = "=1.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std", "alloc"]
std = []
alloc = []
serde = ["dep:serde"]
defmt = ["dep:defmt"]

[[bench]]
name = "codec"
harness = false
