[package]
name = "rustmod-datalink"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Async Modbus transport abstractions and implementations for rust-mod."
readme = "../../README.md"

[dependencies]
rustmod-core.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-serial = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
rtu = ["dep:tokio-serial"]
metrics = []
