[package]
name = "rustmod-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tools for interacting with Modbus devices via rust-mod."
readme = "../../README.md"

[dependencies]
rustmod-client.workspace = true
rustmod-datalink.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
